Add view structure for index and detail

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -12,3 +12,9 @@ $import-google-fonts: false
 
 .main.container
     padding-top: 5em
+    max-width: 960px !important
+
+.KMDetail
+    .ui.basic.segment
+        margin-right: 337px !important
+        padding: 0
