--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -5,9 +5,6 @@
 body
     margin-top: 100px
 
-    &>.container
-        max-width: 960px
-
 .navbar-nav
     flex-direction: row
 
@@ -35,3 +32,11 @@ h1 + form
     @include animation-duration(1s)
     @include animation-delay(.4s)
     @include animation-fill-mode(forwards)
+
+
+.KMDetail
+    &__Panel
+        border-left: 1px solid $gray-300
+
+        p, ul
+            margin-bottom: 2rem
