--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -11,6 +11,7 @@ body
     .nav-link
         padding-right: .5rem
         padding-left: .5rem
+        cursor: pointer
 
 .navbar-brand
     .logo
