--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -42,3 +42,22 @@ h1 + form
 
         p, ul
             margin-bottom: 2rem
+
+
+.full-page-illustrated-message
+    display: flex
+    max-width: 80rem
+    width: 100%
+    align-items: center
+    justify-content: center
+    margin: 5rem auto auto
+
+    img
+        width: 30%
+
+    div
+        max-width: 50%
+        margin-left: 2rem
+
+    p
+        font-size: 1.25rem
