--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -61,3 +61,21 @@ h1 + form
 
     p
         font-size: 1.25rem
+
+
+.card-form
+    max-width: 30rem
+    margin: auto
+
+    .card-header
+        font-weight: bold
+
+    .form-group
+        margin-bottom: 2rem
+
+        label
+            font-weight: bold
+
+    .form-group + .text-muted
+        margin-top: -1.5rem
+        margin-bottom: 2rem
